# dynasty

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  TODO.md  dynasty.cabal  hie.yaml  install-vscode-ext.sh  symlink-core.sh
Examples/: args.dy  bf.dy  bool.dy  boxedRecursion.dy  code.dy  compose.dy  ctor.dy  exn.dy  fac.dy  lambdaPat.dy  list.dy  listOps.dy  record.dy  recursion.dy
Examples/BF/: Random.bf  bf.dy  bfFn.dy
core/: Core.Bool.dy  Core.DOM.dy  Core.Debug.dy  Core.FS.dy  Core.Function.dy  Core.IO.DOM.dy  Core.IO.Node.dy  Core.IO.NodeAPI.dy  Core.IO.Ref.dy  Core.IO.Unsafe.dy  Core.IO.dy  Core.List.dy  Core.Math.dy  Core.Seq.dy  Core.String.dy  Core.Tuple.dy  Core.Web.dy  Dynasty.DOM.dy  Dynasty.Function.dy  Dynasty.IO.dy  Dynasty.List.dy  Dynasty.Prelude.dy  Dynasty.String.dy  Dynasty.Tuple.dy  runtime.js
demo/: Demo.dy  Main.dy  index.html
dy-vscode/: CHANGELOG.md  README.md  package.json  vsc-extension-quickstart.md
dy-vscode/syntaxes/: dy.tmLanguage.json
dynasty-vscode/: CHANGELOG.md  README.md  install.sh  package.json  uninstall.sh
dynasty-vscode/syntaxes/: dy.tmLanguage.json
examples/: BF.dy  Cont.dy  Fac.dy  Lists.dy  Parser.dy  Record.dy  bf.dy  case.dy  cont.dy  fac.dy  listOps.dy  lists.dy  math.dy  parser.dy  record.dy
examples/bf/: BF.dy  CREDITS.md  Random.bf  Triangle.bf  bf.dy  bfFn.dy
examples/calc/: Calc.dy  index.html
examples/case/: Case.dy
examples/cont/: Cont.dy
examples/fac/: Fac.dy
examples/list/: List.dy
examples/math/: Math.dy
examples/parser/: Parser.dy
examples/record/: Record.dy
examples/ref/: Ref.dy
src/: Main.hs  Opts.hs  Utils.hs
src/Language/Dynasty/: Codegen.hs  Core.hs  Desugaring.hs  Lowering.hs  NameResolution.hs  Opts.hs  Parser.hs  Simplify.hs  Syntax.hs  Utils.hs  Validate.hs  Validation.hs
src/Language/Dynasty/Frontend/: Core.hs  Parser.hs  Syntax.hs  Validate.hs
src/Language/Dynasty/Runtime/: Eval.hs  FFI.hs  Prelude.hs  Val.hs
