cabal-version: 3.8

name: dynasty
version: 0.0.0.0
synopsis: A lazy functional language that compiles to JavaScript
description: Please see the README on GitHub at <https://github.com/aionescu/dynasty#readme>
homepage: https://github.com/aionescu/dynasty#readme
bug-reports: https://github.com/aionescu/dynasty/issues
license: GPL-3.0-only
license-file: LICENSE.txt
maintainer: aaionescu@pm.me
copyright: Copyright (C) 2020-2023 Alex Ionescu
category: Compilers/Interpreters, Language
build-type: Simple

extra-doc-files:
  CHANGELOG.md

extra-source-files:
  README.md

data-files:
  core/runtime.js
  core/**/*.dy

source-repository head
  type: git
  location: https://github.com/aionescu/dynasty

common ghc-flags
  default-language: GHC2021
  default-extensions:
    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    ImplicitParams
    ImpredicativeTypes
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoFieldSelectors
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    UnliftedDatatypes
    UnliftedNewtypes
    ViewPatterns

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

executable dynasty
  import: ghc-flags

  hs-source-dirs: src
  main-is: Main.hs
  autogen-modules: Paths_dynasty

  other-modules:
    Language.Dynasty.Codegen
    Language.Dynasty.Core
    Language.Dynasty.Lowering
    Language.Dynasty.NameResolution
    Language.Dynasty.Opts
    Language.Dynasty.Parser
    Language.Dynasty.Syntax
    Language.Dynasty.Utils
    Language.Dynasty.Validation
    Paths_dynasty

  build-depends:
    base >=4.17 && <5
    , containers ^>= 0.6.4
    , directory ^>= 1.3.7
    , filepath ^>= 1.4.2
    , megaparsec ^>= 9.2
    , monoidal-containers ^>= 0.6.3
    , mtl ^>= 2.3
    , optparse-applicative ^>= 0.17
    , parser-combinators ^>= 1.3
    , scientific ^>= 0.3.7
    , text ^>= 2
    , transformers ^>= 0.6.0.4
