cabal-version: 3.8

name: dynasty
version: 0.0.0.0
synopsis: A lazy functional language that compiles to JavaScript
description: Please see the README on GitHub at <https://github.com/aionescu/dynasty#readme>
homepage: https://github.com/aionescu/dynasty#readme
bug-reports: https://github.com/aionescu/dynasty/issues
license: GPL-3.0-only
license-file: LICENSE.txt
maintainer: aaionescu@pm.me
copyright: Copyright (C) 2020-2023 Alex Ionescu
category: Compilers/Interpreters, Language
build-type: Simple

extra-doc-files:
  CHANGELOG.md
  README.md

data-files:
  core/runtime.js
  core/**/*.dy

source-repository head
  type: git
  location: https://github.com/aionescu/dynasty

executable dynasty
  default-language: GHC2021
  default-extensions:
    BlockArguments
    DerivingStrategies
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ViewPatterns

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wmissing-deriving-strategies
    -Wno-name-shadowing
    -Wpartial-fields
    -Wprepositive-qualified-module
    -Wredundant-constraints
    -Wunused-packages

  hs-source-dirs: src
  main-is: Main.hs
  autogen-modules: Paths_dynasty

  other-modules:
    Language.Dynasty.Codegen
    Language.Dynasty.Core
    Language.Dynasty.Lowering
    Language.Dynasty.NameResolution
    Language.Dynasty.Opts
    Language.Dynasty.Parser
    Language.Dynasty.Syntax
    Language.Dynasty.Utils
    Language.Dynasty.Validation
    Paths_dynasty

  build-depends:
    base >=4.19  && <5
    , containers ^>= 0.6.7
    , directory ^>= 1.3.8
    , filepath ^>= 1.4.200
    , megaparsec ^>= 9.6.1
    , monoidal-containers ^>= 0.6.4
    , mtl ^>= 2.3
    , optparse-applicative ^>= 0.18
    , parser-combinators ^>= 1.3
    , scientific ^>= 0.3.7
    , text ^>= 2.1
    , transformers ^>= 0.6.1
